fix: remove recipe route
